# OLMO_PROMETEUS

./: .claudeignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  PROJECT_CONTRACT.md  README.md  TREE.md  VALUES.md  biome.json
.codex/: config.toml
.obsidian/: appearance.json  core-plugins.json  graph.json
Prometeus/: README.md
hooks/: README.md
lab/wiki-graph-lab/: README.md  build_graph_data.py  graph-data.js  index.html  pyproject.toml
private-learning/: OPEN-START-HERE.cmd  START-HERE.html  dashboard.html
procedures/: README.md  decision-protocol.md
roadmap/: EMAIL-DIGEST-4P.md  STUDY-TRACK-DONE.md  WORK-LANES.md
scripts/: ask-bash-write.sh  check.ps1  check.sh  doctor-github-remote.sh  evolve.ps1  evolve.sh  guard-olmo-write-hook.ps1  guard-olmo-write-hook.sh  guard-read-secrets.sh  guard-secrets.sh  install-stack.sh  integrity.sh  maturity.ps1  pre-compact-checkpoint.sh  session-start.sh  simulate-ci.sh  test-antifragile-learning.ps1  test-guard-secrets.sh  test-olmo-boundary-guard.ps1  test-olmo-boundary-guard.sh  test-orchestration-e2e.ps1  trace-edits.sh
shadow/: AGENT-MODULES.md  AGENT-USAGE.md  BACKLOG.md  CLUSTER-CONTRACT.md  DATA-CLASSIFICATION.md  EMAIL-DIGEST-4P.md  EVIDENCE-LOG.md  FOUNDATION.md  GITHUB-REMOTE-WSL.md  HANDOFF.md  HYGIENE.md  INCIDENT-LOG.md  INCORPORATION-LOG.md  KBP.md  LEGACY-INCORPORATION-2026-04-26.md  LEGACY-ROOTS-2026-04-26.md  ORCHESTRATION-HARNESS-ANTIFRAGILE.md  PHI-CHECKLIST.md  PLAN-2026-04-23.md  SOTA-AGENTS-SKILLS-TEAM-2026-04-22.md  SOTA-DECISIONS.md  SOTA-STACK-2026-04-26.md  (+13 more)
(+87 files in other folders)
