[project]
name = "wiki-graph-lab"
version = "0.1.0"
description = "Companion visual reversivel: gera graph-data.js a partir de Prometeus/wiki/."
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
